feat(auth): add API User CRUD, with Swagger docs
