# api-pos/app/Http/Resources/UserResource.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     type="object",
+ *     title="User",
+ *     required={"id", "name", "email"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="name", type="string", example="Fachran Sandi"),
+ *     @OA\Property(property="email", type="string", example="fachransandi@gmail.com"),
+ *     @OA\Property(
+ *         property="roles",
+ *         type="array",
+ *         @OA\Items(type="string", example="admin")
+ *     ),
+ *     @OA\Property(property="created_at", type="string", format="date-time", example="2024-01-01T12:00:00Z"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time", example="2024-01-01T13:00:00Z")
+ * )
+ */
+
+class UserResource extends JsonResource
+{
+    public function toArray(Request $request): array
+    {
+        return [
+            'id'    => $this->id,
+            'name'  => $this->name,
+            'email' => $this->email,
+            'roles' => $this->userRole->pluck('role.name'),
+        ];
+    }
+}
